rns-lang/src/lexer/snapshots/type_hints-bare_at_sign.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
@
----- TOKENS -----
KIND             | SPAN  | LSP     | TEXT
----             | ----  | ---     | ----
Identifier("@")  | 0..1  | 0:0..1  | @
Newline          | 1..2  | 0:1..2  | \n
Eof              | 2..2  | 1:0..0  |
