rns-lang/src/lexer/snapshots/type_hints-multiple_on_same_line.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
@utf8 @int @string
----- TOKENS -----
KIND               | SPAN    | LSP       | TEXT
----               | ----    | ---       | ----
TypeHint(utf8)     | 0..5    | 0:0..5    | @utf8
TypeHint(integer)  | 6..10   | 0:6..10   | @int
TypeHint(string)   | 11..18  | 0:11..18  | @string
Newline            | 18..19  | 0:18..19  | \n
Eof                | 19..19  | 1:0..0    |
