rns-lang/src/lexer/snapshots/whitespace-newlines.snap
---
source: rns/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
token1
token2
----- TOKENS -----
KIND                  | SPAN    | TEXT
----                  | ----    | ----
Identifier("token1")  | 0..6    | token1
Newline               | 6..7    | \n
Identifier("token2")  | 7..13   | token2
Newline               | 13..14  | \n
Eof                   | 14..14  |
