rns-lang/src/lexer/snapshots/whitespace-spaces_between_tokens.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
.class    public    Test
----- TOKENS -----
KIND                | SPAN    | TEXT
----                | ----    | ----
DotClass            | 0..6    | .class
AccessFlag(Public)  | 10..16  | public
Identifier("Test")  | 20..24  | Test
Newline             | 24..25  | \n
Eof                 | 25..25  |
